--- a/hw 13.11 done/index.html
+++ b/hw 13.11 done/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home work</title>
+    <title>Document</title>
 </head>
 <body>
-    <script>// 1-тапсырма
+    <script>
+        // 1-тапсырма
 
         for (let i = 1; i <= 100; i++) {
             if (i % 2 === 0) {
@@ -25,7 +26,7 @@
             } else { 
               console.log(i);  
             }
-          } 
+          }
 
             
         // 2-тапсырма
@@ -97,7 +98,6 @@
           } else {
             alert("7-ге қалдықсыз бөлінетін сандар табылмады.");
           }
-        
-        </script>
+    </script>
 </body>
 </html>
